fix(css-components): Fixed broken styles for retina border on alert-dialog, list, navigation-bar, tabbar components.

--- a/css-components/src/components/alert-dialog.less
+++ b/css-components/src/components/alert-dialog.less
@@ -21,7 +21,7 @@ limitations under the License.
     background-size: 100% 1px;
     background-repeat: no-repeat;
     background-position: top;
-    background-image: linear-gradient(180deg, color, color 50%, transparent 50%);
+    background-image: linear-gradient(180deg, @color, @color 50%, transparent 50%);
   });
 }
 
