--- a/css-components/src/components/list.less
+++ b/css-components/src/components/list.less
@@ -57,10 +57,10 @@
   background-size: 100% 1px;
   background-repeat: no-repeat;
   background-position: bottom;
-  background-image: linear-gradient(0deg, color, color 100%);
+  background-image: linear-gradient(0deg, @color, @color 100%);
 
   .retina-query({
-    background-image: linear-gradient(0deg, color, color 50%, transparent 50%);
+    background-image: linear-gradient(0deg, @color, @color 50%, transparent 50%);
   });
 }
 
@@ -70,7 +70,7 @@
     background-size: 100% 1px, 100% 1px;
     background-repeat: no-repeat;
     background-position: bottom, top;
-    background-image: linear-gradient(0deg, color, color 50%, transparent 50%), linear-gradient(180deg, color, color 50%, transparent 50%);
+    background-image: linear-gradient(0deg, @color, @color 50%, transparent 50%), linear-gradient(180deg, @color, @color 50%, transparent 50%);
   });
 }
 
@@ -80,7 +80,7 @@
     background-size: 100% 1px;
     background-repeat: no-repeat;
     background-position: top;
-    background-image: linear-gradient(180deg, color, color 50%, transparent 50%);
+    background-image: linear-gradient(180deg, @color, @color 50%, transparent 50%);
   });
 }
 
