--- a/css-components/src/components/navigation-bar.less
+++ b/css-components/src/components/navigation-bar.less
@@ -40,27 +40,27 @@
     </div>
 */
 
-.retina-navigation-bar-border(@position; @color: #ddd) when (@position = top) {
+.retina-navigation-bar-border(@position; @color) when (@position = top) {
   border-top: none; // if position == 'top'
   background-size: 100% 1px;
   background-repeat: no-repeat;
   background-position: @position;
-  background-image: linear-gradient(180deg, color, color 100%); // if position == 'top'
+  background-image: linear-gradient(180deg, @color, @color 100%); // if position == 'top'
 
   .retina-query({
-    background-image: linear-gradient(180deg, color, color 50%, transparent 50%); // if position == 'top'
+    background-image: linear-gradient(180deg, @color, @color 50%, transparent 50%); // if position == 'top'
   });
 }
 
-.retina-navigation-bar-border(@position; @color: #ddd) when (@position = bottom) {
+.retina-navigation-bar-border(@position; @color) when (@position = bottom) {
   border-bottom: none; // if position == 'bottom'
   background-size: 100% 1px;
   background-repeat: no-repeat;
   background-position: @position;
-  background-image: linear-gradient(0deg, color, color 100%); // if position == 'bottom'
+  background-image: linear-gradient(0deg, @color, @color 100%); // if position == 'bottom'
 
   .retina-query({
-    background-image: linear-gradient(0deg, color, color 50%, transparent 50%); // if position == 'bottom'
+    background-image: linear-gradient(0deg, @color, @color 50%, transparent 50%); // if position == 'bottom'
   });
 }
 
