--- a/css-components/src/components/tabbar.less
+++ b/css-components/src/components/tabbar.less
@@ -105,7 +105,7 @@
     background-size: 100% 1px;
     background-repeat: no-repeat;
     background-position: top;
-    background-image: linear-gradient(180deg, color, color 50%, transparent 50%);
+    background-image: linear-gradient(180deg, @color, @color 50%, transparent 50%);
   });
 }
 
@@ -115,7 +115,7 @@
     background-size: 100% 1px;
     background-repeat: no-repeat;
     background-position: bottom;
-    background-image: linear-gradient(0deg, color, color 50%, transparent 50%);
+    background-image: linear-gradient(0deg, @color, @color 50%, transparent 50%);
   });
 }
 
